--- a/package.json
+++ b/package.json
@@ -18,5 +18,14 @@
         "rimraf": "^3.0.2",
         "uid": "^2.0.0"
     },
-    "main": "./bin/index.js"
+    "main": "./bin/index.js",
+    "homepage": "https://github.com/initialing/scvue-cli#readme.md",
+    "repository": {
+        "type": "git",
+        "directory": "git+https://github.com/initialing/scvue-cli.git"
+    },
+    "bugs": {
+        "url": "https://github.com/initialing/scvue-cli/issues"
+    },
+    "license": "MIT"
 }
